3 column section reduced to 1 on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,16 @@ svg:hover {
     fill:black;
 }
 
+@media (max-width: 768px){
+    .flex-items {
+        flex-basis: 100%;
+    }
+    #div-2, #div-3 {
+        padding-left: 0;
+        border-left: none;
+    }
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
